name:                kattis-tool
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/mlyean/kattis-tool#readme
license:             BSD3
license-file:        LICENSE
author:              Lim Ming Yean
maintainer:          mingyean@hotmail.com
copyright:           2019 Lim Ming Yean
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint >= 0.6.8
                     , bytestring >= 0.10.8
                     , conduit >= 1.3
                     , directory >= 1.3
                     , hashable >= 1.2
                     , http-conduit >= 2.3
                     , process >= 1.6
                     , time >= 1.8
                     , utility-ht >= 0.0.14
                     , zip >= 1.2
  ghc-options:         -O3 -threaded
  other-modules:       Paths_kattis_tool
